# agentic-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
mcp-servers/ori-ducklake-mcp/: README.md  pyproject.toml
mcp-servers/ori-ducklake-mcp/src/ducklake_mcp/: server.py
scripts/: connect_ducklake.py  describe_table_detailed.py
skills/ducklake/: SKILL.md
skills/ducklake/references/: patterns.md  schemas.md
